# old_systems

./: .gitignore  .gitmodules  0001-Fixes-for-clippy.-Add-documentation.patch  Cargo.toml  README.md  TechnicalTodo.md  setup.py
common/: Cargo.toml
common/src/: audio.rs  event.rs  input.rs  lib.rs  recording.rs  romlist.rs  storage.rs  streaming.rs  video.rs
common/src/network/: mod.rs
common/src/network/emulator/: mod.rs
nes/: 6502 Reference.html  __init__.py  cpu_reference.tex  motherboard.vhd  nes.xise  nes_cartridge.vhd  nes_cpu.vhd  nes_debugger.txt  nes_test.vhd  processor_opcodes.xlsm  rom.txt  rom_processor.tcl  sram.vhd
nes/6502 Reference_files/: ads.html  archive.min.js.download  cookie.js.download  f(1).txt  f(2).txt  f.txt  obelisk.css  osd.js.download  regenerator-runtime-polyfill.min.js.download
nes/c/: cartridge.c  cartridge.h  nes.c  nes.h  processor_6502.c  processor_6502.h
nes/c/console/: console.c  console.h
nes/c/mappers/: common.c  common.h  mapper0.c  mapper0.h  mapper1.c  mapper1.h  mappers.h
nes/haskell/: nes.hs
nes/hdl/: __init__.py  audio_fifo.cmp  audio_fifo.qip  audio_fifo.vhd  audio_fifo_inst.vhd  clock_calcs.ods  clocked_sram.vhd  clocked_sram_init.vhd  ddr.vhd  delay_line.vhd  edge_detect.vhd  font_lookup.vhd  frame_sync.vhd  gowin_clkdiv2.ipc  gowin_clkdiv2.mod  gowin_clkdiv2.vhd  gowin_clkdiv2_tmp.vhd  gowin_ddr.ipc  gowin_ddr.vhd  gowin_nes_pll.ipc  gowin_nes_pll.mod  gowin_nes_pll.vhd  gowin_nes_pll_tmp.vhd  gowin_sdram.ipc  gowin_sdram.vhd  gowin_sdram.vho  gowin_sdram.vo  gowin_sdram_tmp.vhd  gowin_video_fifo.ipc  gowin_video_fifo.vhd  gowin_video_fifo.vho  gowin_video_fifo.vo  gowin_video_fifo_tmp.vhd  hdmi.vhd  hdmi_pll.cmp  hdmi_pll.ppf  hdmi_pll.qip  hdmi_pll.vhd  hdmi_pll_inst.vhd  lfsr.vhd  (+52 more)
nes/hdl/dsim/: nesA_tang_nano_20k.dpf  sources.txt
nes/hdl/hdmi/: serializer.sv
nes/hdl/max10_hdmi_output_sim/: max10_hdmi_output.vhd
nes/hdl/max10_hdmi_output_sim/aldec/: rivierapro_setup.tcl
nes/hdl/max10_hdmi_output_sim/altera_gpio_lite/: altera_gpio_lite.sv
nes/hdl/max10_hdmi_output_sim/altera_gpio_lite/mentor/: altera_gpio_lite.sv
nes/hdl/max10_hdmi_output_sim/mentor/: msim_setup.tcl
nes/hdl/max10_hdmi_output_sim/synopsys/vcsmx/: synopsys_sim.setup  vcsmx_setup.sh
nes/hdl/max10_hdmi_output_sim/xcelium/: cds.lib  xcelium_setup.sh
nes/hdl/max10_hdmi_output_sim/xcelium/cds_libs/: max10_hdmi_output.cds.lib
nes/hdl/src/: gowin_sdram_interface.vhd  large_divider.vhd  tang_nano_nes.cst  tang_nano_nes.sdc
nes/rust/: Cargo.toml  test_roms.txt
nes/rust/src/: apu.rs  benchmark.rs  cartridge.rs  cartridge_prg_ram_dump.rs  controller.rs  cpu.rs  emulator_data.rs  genie.rs  main.rs  motherboard.rs  name_table_dump_window.rs  network.rs  pattern_table_dump_window.rs  ppu.rs  ppu_memory_dump_window.rs  recording.rs  rom_status.rs  romlist.rs  sprite_dump_window.rs  utility.rs
nes/rust/src/apu/: dmc.rs  envelope.rs  length.rs  noise.rs  square.rs  triangle.rs
nes/rust/src/cartridge/: mapper00.rs  mapper01.rs  mapper02.rs  mapper03.rs  mapper04.rs  mapper05.rs  mapper34.rs  mapper71.rs
nes/rust/src/network/: mod.rs  streaming.rs
nes/rust/src/network/emulator/: mod.rs
nes/rust/src/tests/: mod.rs
nes/rust/src/windows/: cartridge_dump.rs  cartridge_prg_ram_dump.rs  configuration.rs  controllers.rs  cpu_memory_dump_window.rs  debug_window.rs  genie.rs  main.rs  mod.rs  name_table_dump_window.rs  network.rs  pattern_table_dump_window.rs  ppu_memory_dump_window.rs  rom_checker.rs  rom_finder.rs  sprite_dump_window.rs
nes/rust/wix/: main.wxs
nes/vhdl/: motherboard.vhd  nes_cartridge.vhd  nes_cpu.vhd  rom_processor.tcl
snes/rust/: Cargo.toml
snes/rust/src/: apu.rs  benchmark.rs  controller.rs  cpu.rs  emulator_data.rs  main.rs  motherboard.rs  ppu.rs  recording.rs  rom_status.rs  romlist.rs
snes/rust/src/cartridge/: mapper00.rs  mod.rs
snes/rust/src/network/: mod.rs
snes/rust/src/network/emulator/: mod.rs
snes/rust/src/windows/: cartridge_dump.rs  cartridge_prg_ram_dump.rs  configuration.rs  controllers.rs  cpu_memory_dump_window.rs  debug_window.rs  genie.rs  main.rs  mod.rs  name_table_dump_window.rs  network.rs  pattern_table_dump_window.rs  ppu_memory_dump_window.rs  rom_checker.rs  rom_finder.rs  sprite_dump_window.rs
