[package]
name = "common-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.31"
compile-time = "0.2.0"
egui-multiwin = { version = "0.3.1", features = ["serde"] }
gilrs = {version = "0.10.2", features = ["serde-serialize"]}
gstreamer = "0.21.1"
gstreamer-app = "0.21.1"
gstreamer-audio = "0.21.1"
gstreamer-video = "0.21.1"
memmap2 = "0.9.0"
ringbuf = "0.3.3"
serde = {version = "1.0.189", features = ["derive"]}
serde_with = "3.3"
strum = { version = "0.25", features = ["derive"] }
walkdir = "2.4"