[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egui-multiwin", "puffin"]
debugger = []
puffin = ["dep:puffin", "dep:puffin_egui"]
egui-multiwin = ["dep:egui-multiwin"]
eframe = ["dep:eframe"]
sdl2 = ["dep:sdl2", "dep:egui_sdl2_gl"]

[dependencies]
rand = "0.8.5"
egui-multiwin = {version = "0.1.2", optional=true}
eframe = { version = "0.20.1", optional=true}
puffin = { version = "0.14.1", optional=true}
puffin_egui = { version = "0.19.1", optional=true }
egui_sdl2_gl = { version="0.16.0", optional=true }
spin_sleep = "1.1.1"

[dependencies.sdl2]
version="0.35.2"
features=["use_mac_framework", "image", "ttf", "mixer"]
optional=true

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="nes_bench"
path="src/benchmark.rs"
harness = false