[package]
name = "nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egui-multiwin", "debugger", "rom_status"]
debugger = []
rom_status = []
puffin = ["dep:puffin", "dep:puffin_egui"]
egui-multiwin = ["dep:egui-multiwin", "dep:cpal"]
eframe = ["dep:eframe", "dep:cpal", "egui/serde"]
sdl2 = ["dep:sdl2", "dep:egui_sdl2_gl"]

[dependencies]
biquad = "0.4.2"
cpal = {version = "0.15.2", optional=true}
data-encoding = "2.4.0"
enum_dispatch = "0.3.12"
rand = "0.8.5"
ringbuf = "0.3.3"
egui-multiwin = { version = "0.1.12", features = ["serde"], optional=true }
egui = { version = "0.23.0", optional=true }
eframe = { version = "0.23.0", optional=true }
puffin = { version = "0.17", optional=true}
puffin_egui = { version = "0.23", optional=true }
egui_sdl2_gl = { version="0.22.1", optional=true }
ring = "0.17.4"
toml = "0.8.2"
walkdir = "2.4"
serde = {version = "1.0.189", features = ["derive"]}
serde_with = "3.3"
bincode = "1.3.3"

[dependencies.sdl2]
version="0.35.2"
features=["use_mac_framework", "image", "ttf", "mixer"]
optional=true

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="nes_bench"
path="src/benchmark.rs"
harness = false