[package]
name = "snes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["egui-multiwin", "debugger", "rom_status"]
debugger = []
rom_status = []
puffin = ["dep:puffin", "dep:puffin_egui"]
egui-multiwin = ["dep:egui-multiwin", "dep:cpal"]
eframe = ["dep:eframe", "dep:cpal", "egui/serde"]
sdl2 = ["dep:sdl2", "dep:egui_sdl2_gl"]

[dependencies]
async-channel = "2.0.0"
asynchronous-codec = "0.7.0"
biquad = "0.4.2"
chrono = "0.4.31"
common-emulator = { path = "../../common" }
compile-time = "0.2.0"
cpal = {version = "0.15.2", optional=true}
data-encoding = "2.4.0"
directories = "5.0.1"
enum_dispatch = "0.3.12"
gilrs = {version = "0.10.2", features = ["serde-serialize"]}
hex_fmt = "0.3.0"
libp2p = { version = "0.53", features = ["tokio", "dns", "macros", "noise", "tcp", "upnp", "yamux", "serde"] }
rand = "0.8.5"
ringbuf = "0.3.3"
egui-multiwin = { version = "0.3.1", features = ["serde"], optional=true }
egui = { version = "0.23.0", optional=true }
eframe = { version = "0.23.0", optional=true }
futures = "0.3.28"
gstreamer = "0.21.1"
gstreamer-app = "0.21.1"
gstreamer-audio = "0.21.1"
gstreamer-video = "0.21.1"
memmap2 = "0.9.0"
open = "5.0.0"
puffin = { version = "0.17", optional=true}
puffin_egui = { version = "0.23", optional=true }
egui_sdl2_gl = { version="0.22.1", optional=true }
rfd = "0.11.4"
ring = "0.17.4"
strum = { version = "0.25", features = ["derive"] }
tokio = "1.33.0"
toml = "0.8.2"
walkdir = "2.4"
serde = {version = "1.0.189", features = ["derive"]}
serde_with = "3.3"
bincode = "1.3.3"

[dependencies.sdl2]
version="0.35.2"
features=["use_mac_framework", "image", "ttf", "mixer"]
optional=true

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name="nes_bench"
path="src/benchmark.rs"
harness = false

[package.metadata.bundle]
identifier = "com.uglyoldbob.snes_emulator"
